# SmashDown

./: .gitignore  README.md  SmashDown.pyproject  pyproject.toml  requirements.txt
smashdown/: __main__.py  application_controller.py  application_model.py
smashdown/tournament/: match.py  pairing_method.py  player.py  team.py  tournament.py
smashdown/tournament/matcher/: matcher.py  matcher_factory.py  pseudo_swiss_matcher.py  random_matcher.py  round_robin_matcher.py
smashdown/ui/: main_window.py  rounds_tab_panel.py
smashdown/ui/design/: main_window.ui  ui_design_file.py
smashdown/ui/table/: players_scores_table_controller.py  players_table_controller.py  rounds_tab_panel.py  table_helpers.py
